main.css
body{
    margin:0;
    padding:0;
    color:#333;
    font-family: "turnip-re", serif;
    font-weight: 400;
    font-family: "Arial";
    font-size: 20px;
    display: flex;
    max-width: 100vw;
    background-color: #f8f8f8;
}
a, a:link, a:visited{
   color: #333;
}
a:hover{
    color: #333;
    /* text-shadow: 1px 1px 20px  #33333371; */

    
}
a:hover > *{
    animation: squigglevision 0.2s 1 alternate;
}
.squiggle{
    animation: squigglevision 0.2s 1 alternate;
}

.project p{
    margin: 30px auto;
}

main{
    display: block;
    margin: 100px auto;
    max-width: calc(100% - 260px);
}
#gallery{
    display: flex;
    flex-wrap: wrap;
}
#gallery h1{
    margin-bottom: 30px;
}


#gallery div{
    display: flex;
    justify-content: space-between;
    flex-basis: calc(100% - 2px);
    padding: 15px 0;
    margin-bottom: 30px;
    text-decoration:none;
}
#gallery a:hover{
    color: #333;
}
#gallery h4{
    margin:0;
    font-weight: normal;
    text-decoration:none;
    flex-basis: calc(50% - 30px);

}
#gallery a{
    text-decoration: none;
    max-width: calc(50% - 30px);
    flex-basis: calc(50% - 30px);
}

h1{
    margin:0;
    font-size: 20px;
    font-weight: normal;
}
nav a{
    font-size: 18px;
}
nav h1{
    font-size: 18px;
}
/* NAVIGATION */

nav{
    position: fixed;
    border-bottom: 1px solid #333;
    top:-5px;
    left:0;
    z-index: 999;
    padding: 15px;
    padding-top:20px;
    width: calc(100% - 30px);
    display: flex;
    justify-content: flex-start;
    background-color: #f8f8f8;
    /* height: 90vh; */
}
nav > *{
    flex-basis: 50%;
}

nav > div{
    display: flex;
    justify-content: space-between;
}
nav ul li{
    display: inline-block;
}

#message{
    position: fixed;
    bottom:15px;
    left: 15px;
    width: calc(100% - 30px);
}
#message img{
    width: 25px;
    float:right;
}
#message img:nth-child(2){
    display: none;
}
#message img:nth-child(1){
    margin-top:5px;
}
#message img:nth-child(1):hover{
    box-shadow: 0px 0px 20px 2px #333;
}
@keyframes squigglevision {
    0% {
      filter: url("#turbulence-1");
    }
    25% {
      filter: url("#turbulence-2");
    }
    50% {
      filter: url("#turbulence-3");
    }
    75% {
      filter: url("#turbulence-4");
    }
    100% {
      filter: url("#turbulence-5");
    }
  }


#message-inner{
   position:fixed;
   max-width: calc(70% - 55px);
   border: 1px solid #333;
   padding: 25px;
   display: none;
   bottom:60px;
   right: 15px;
   background-color: #f8f8f8;
   background-repeat: no-repeat;
   background-position: 17% 40%;
   background-size:300%;
   border-top-left-radius: 0;
}
#message.on img:nth-child(1), #message.on em{
    display: none;
}

#message-inner blockquote:nth-child(3){
    margin-top:0;
}
#message.on img:nth-child(2){
    display: inline-block;
}
#message.on #message-inner{
    display: block;
}
#message.on #message-outer{
    position:fixed;
    width:100vw;
    height:100vh;
    bottom:75px;
    left:50px;
    display: block;
    z-index: -1;
}
#message-inner p{
    margin:0;
}
#message-inner a{
    text-decoration: underline;
}
#message-outer{
    display: none;
}
#message em{
    position: relative;
    vertical-align: top;
    line-height: 2;
}
#message.open em{
    position: relative;
    top:-7px;
    display: none;
    left:2px;
}

#message img{
    cursor: pointer;
}
.project-img-group{
    display: flex;
    gap: 30px;
    max-width: 100%;
    flex-wrap: wrap;
    overflow: hidden;
}
main .project-img-group > img{
    flex-shrink: 1;
    width: calc(33% - 30px);
    flex-basis: calc(33% - 30px);
    object-fit: contain;
}
main .project-img-group > .half{
    width: calc(50% - 30px);
    flex-basis: calc(50% - 30px);
}
nav a{
    text-decoration: none;
    color:#333;
}
nav ul{
    padding-left:0;
    margin: 0;
}
nav ul.right li:first-child{
    padding-top:0;
}
nav li{
    list-style: none;
    padding: 5px 0;
}

nav li select{
    background-color: transparent;
    color:#f8f8f8;
    max-width: 200px;
    text-overflow: ellipsis;
    padding:2px 7px;
    border-radius: 5px;
    border:1px solid #f8f8f8;
}
main img{
    width: 100%;
}
main a{
    color:#333;
}
main .caption{
    margin: 15px 0;
    display: inline-block;
}

@keyframes "blink" {
    from, to {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
  }
  
  @-moz-keyframes blink {
    from, to {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
  }
  
  @-webkit-keyframes "blink" {
    from, to {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
  }
  
  @-ms-keyframes "blink" {
    from, to {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
  }
  
  @-o-keyframes "blink" {
    from, to {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
  }
#blinking-cursor{
	display: inline-block;
	background: #333;
	height:20px;
	width:2px;
	margin-left:5px;
	top:2px;
	position: relative;
	-webkit-animation: 1s blink step-end infinite;
   -moz-animation: 1s blink step-end infinite;
   -ms-animation: 1s blink step-end infinite;
   -o-animation: 1s blink step-end infinite;
   animation: 1s blink step-end infinite;
}

/*large desktop*/
@media(max-width:1200px){
    main{
       max-width: calc(100% - 30px);  
    }
   
}
/* MOBILE */
@media(max-width:900px){
    body, h1,h4, nav h1, nav a{
        font-size:14px;
    }
   
    nav ul select{ 
        max-width: 25%;
    }
    #message-inner{
        max-width: calc(100% - 85px);
        bottom: 75px;
        left:15px;
    }
    nav div:first-child{
        flex-basis: 33%;
    }
    nav div:nth-child(2){
        flex-basis: 66%;
    }
    #gallery div{
        flex-wrap: wrap;
    }
    #gallery a{
        max-width: calc(100% - 0px);
        flex-basis: calc(100% - 0px);
        margin-bottom: 30px;
    }
    #gallery h4 span{
        text-decoration: underline;
    }
}

@-moz-document url-prefix() {
    a:hover {
      text-shadow: 4px 4px 40px rgba(0, 0, 0, 0.676);
    }
  }

_::-webkit-full-page-media, _:future, :root .squiggle {

    animation:none
  }

